--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,92 @@
-a.hElem {
-    display: inline;
+.header-link{
     color: rgb(0, 0, 0);
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica;
     text-decoration: none;
-    font-size: 13px;
-    margin: 10px
+    font-size: 14px;
+    margin: 15px;
+    opacity: .75;
+}
+.about{
+    margin-left: 40px;
+    margin-right: 0px;
+}
+.header-icon-link{
+    margin: 10px;
+}
+.header-icon-grid{
+    vertical-align: middle;
+    opacity: .75;
+    margin: auto 10px;
+}
+.header-icon-grid:hover{
+    opacity: 1;
 }
 
+.header-icon-profile{
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 20px;
+    margin-left: 5px;
+    opacity: 1;
+}
 a:hover {
     text-decoration: underline;
 }
-
 header {
-    margin: 20px;
+    height: 60px; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
-.right-just {
-    float: right;
+body {
+    margin: 0px;
 }
-
 .searchBar{
     border-style: solid; 
     border-width: 1px;
-    border-color: rgb(146, 146, 146);
+    border-color: rgb(167, 167, 167);
     border-radius: 30px;
     height: 35px;
-    width: 400px;
+    width: 600px;
     margin: 60px auto;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
     align-items: center;
+    padding: 5px 8px 5px 10px;
+    justify-content: space-between;
+}
+
+.searchbar-container{
+    display: block;
 }
 
 .searchBar:focus-within {
-    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.507);
-}
-.guGal{
-    display: block; 
-    min-width: 30%; 
-    max-width: 70%; 
-    margin: auto;
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.342);
 }
 
-.inlineLinkIco{
+.logo{
+    display: block;
+    margin: 0px auto;
+}
+
+a.voice-search{
     margin: 10px;
-    display: inline;
-    
+    display: inline-block;
+}
+img.voice-search{
+    width: 19px;
 }
 
 .search{
-    display: inline;
+    display: inline-block;
     border-style: none;
-    margin: 0px;
-    padding: 0px;
-    width: 320px;
-    font-size: 20px;
+    margin: 0px 5px;
+    font-size: 18px;
+    flex: 1;
 }
 
-.submitButton{
-    width: 20px;
+.submit-button{
+    display: inline-block;
+    width: 18px;
+    margin-left: 10px;
+    vertical-align: middle;
 }
