--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@
 .header-icon-grid:hover{
     opacity: 1;
 }
-
 .header-icon-profile{
     border-radius: 50%;
     vertical-align: middle;
@@ -41,7 +40,17 @@ header {
 body {
     margin: 0px;
 }
-.searchBar{
+.logo{
+    display: block;
+    margin: 0px auto;
+}
+.searchbar-container{
+    display: block;
+}
+.searchBar:focus-within {
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.342);
+}
+.search-bar{
     border-style: solid; 
     border-width: 1px;
     border-color: rgb(167, 167, 167);
@@ -54,39 +63,27 @@ body {
     padding: 5px 8px 5px 10px;
     justify-content: space-between;
 }
-
-.searchbar-container{
-    display: block;
-}
-
-.searchBar:focus-within {
-    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.342);
-}
-
-.logo{
-    display: block;
-    margin: 0px auto;
-}
-
 a.voice-search{
     margin: 10px;
-    display: inline-block;
 }
 img.voice-search{
-    width: 19px;
+    width: 20px;
 }
-
 .search{
-    display: inline-block;
     border-style: none;
     margin: 0px 5px;
     font-size: 18px;
     flex: 1;
 }
-
+.search:focus{
+    outline: none;
+}
+.search-form{
+    flex: 1;
+    display: flex;
+}
 .submit-button{
-    display: inline-block;
-    width: 18px;
+    width: 20px;
+    height: 20px;
     margin-left: 10px;
-    vertical-align: middle;
 }
