--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ body {
 .logo{
     display: block;
     margin: 0px auto;
+    width: 400px;
+    margin-bottom: 25px;
 }
 .searchbar-container{
     display: block;
@@ -113,4 +115,30 @@ img.voice-search{
     border-width: 1px;
     border-color: rgb(141, 141, 141);
     box-shadow: 0px -1px 7px 0px rgb(173, 173, 173);
+}
+
+footer{
+    display:flex;
+    justify-content: space-between;
+    position: absolute;
+    width: 100%;
+    height: 2.5rem;
+    bottom: 0;
+    background-color: rgb(230, 230, 230);
+}
+
+.footer-link{
+    display: inline-block;
+    color: rgb(0, 0, 0);
+    font-family: Helvetica;
+    text-decoration: none;
+    font-size: 14px;
+    margin: 0px 15px;
+    opacity: .75;
+}
+
+.footer-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
